--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,55 @@
         {% endblock %}
     </head>
     <body>
+        <nav class="py-2 border-bottom">
+            <div class="container d-flex flex-wrap">
+                <div class="dropdown">
+                    <a class="nav nav-link dropdown-toggle text-dark" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Mon Blog
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Tableau de bord</a></li>
+                        <li><a class="dropdown-item" href="#">Menu</a></li>
+                    </ul>
+                </div>
+                <div class="dropdown">
+                    <a class="nav nav-link dropdown-toggle text-dark" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Ajouter
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Article</a></li>
+                        <li><a class="dropdown-item" href="#">Page</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="container">
+            <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+                <a class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none" href="{{ path('app_home') }}" >
+                    <span class="fs-4">Nalius Blog</span>
+                </a>
+
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="#">S'inscrire</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="#">Se connecter</a>
+                    </li>
+                </ul>
+
+            </header>
+        </div>
+
         {% block body %}{% endblock %}
+
+        <div class="container">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <div class="col-md-4 d-flex align-items-center">
+                    <span class="copyright">© {{ 'now'|date('Y') }} NaliusBlog. Tous droits réservés</span>
+                </div>
+            </footer>
+        </div>
     </body>
 </html>
