--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
                         Mon Blog
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Tableau de bord</a></li>
+                        <li><a class="dropdown-item" href="{{ path('admin') }}">Tableau de bord</a></li>
                         <li><a class="dropdown-item" href="#">Menu</a></li>
                     </ul>
                 </div>
