--- a/templates/article/item.html.twig
+++ b/templates/article/item.html.twig
@@ -1,9 +1,9 @@
 {% set article_show = path('article_show', { 'slug': article.slug }) %}
 
-<article>
+<article class="mb-5">
     <div class="row">
 
-        <div class="col-md-5">
+        <div class="col-md-{{ leftCol ?? 5 }}">
             {% if article.featuredImage %}
                 <a href="{{ article_show }}">
                     <img src="/uploads/{{ article.featuredImage.filename }}" alt="{{ article.featuredImage.altText }}" loading="lazy" width="350" height="205" >
@@ -11,7 +11,7 @@
             {% endif %}
         </div>
 
-        <div class="col-md-7">
+        <div class="col-md-{{ rightCol ?? 7 }}">
             <h2>
                 <a class="text-decoration-none" href="{{ article_show }}">{{ article.title }}</a>
             </h2>
