--- a/templates/widjet/categories.html.twig
+++ b/templates/widjet/categories.html.twig
@@ -1,11 +1,10 @@
 <div class="p-4">
     <h4 class="fst-italic">Catégories</h4>
-    <ol class="list-unstyle mb-0">
-        <li>
-            <a class="text-decoration-none" href="#">Tutoriel PHP</a>
-        </li>
-        <li>
-            <a class="text-decoration-none" href="#">Tutoriel MySQL</a>
-        </li>
+    <ol class="list-unstyled mb-0">
+        {% for category in categories %}
+            <li>
+                <a class="text-decoration-none" href="{{ path('category_show', { slug: category.slug }) }}">{{ category.name }}</a>
+            </li>
+        {% endfor %}
     </ol>
 </div>
