--- a/templates/comment/index.html.twig
+++ b/templates/comment/index.html.twig
@@ -1,20 +1,17 @@
-{% extends 'base.html.twig' %}
+{% set username = comment.user.username %}
 
-{% block title %}Hello CommentController!{% endblock %}
+<div class="comment mb-5" id="comment-{{ comment.id }}">
+    <div class="card">
+        <div class="card-body">
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+            <h5 class="card-title">
+                <a class="text-decoration-none">
+                    <span class="comment-author">{{ username }}</span>
+                </a> {{ comment.createdAt|date('d M Y à H:i:s') }}
+            </h5>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+            <p class="card-text">{{ comment.content }}</p>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'E:/Laragon/www/symfonyblog/src/Controller/CommentController.php'|file_link(0) }}">src/Controller/CommentController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'E:/Laragon/www/symfonyblog/templates/comment/index.html.twig'|file_link(0) }}">templates/comment/index.html.twig</a></code></li>
-    </ul>
+        </div>
+    </div>
 </div>
-{% endblock %}
