--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{{ path('admin') }}">Tableau de bord</a></li>
                             {% if is_granted('ROLE_ADMIN') %}
-                                <li><a class="dropdown-item" href="{{ ea_index('MenuCrudController') }}">Menus</a></li>
+                                <li><a class="dropdown-item" href="{{ ea_gen_url('MenuCrudController') }}">Menus</a></li>
                             {% endif %}
                         </ul>
                     </div>
@@ -35,8 +35,8 @@
                             Ajouter
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Article</a></li>
-                            <li><a class="dropdown-item" href="#">Page</a></li>
+                            <li><a class="dropdown-item" href="{{ ea_gen_url('ArticleCrudController', 'new') }}">Article</a></li>
+                            <li><a class="dropdown-item" href="{{ ea_gen_url('PageCrudController', 'new') }}">Page</a></li>
                         </ul>
                     </div>
                 </div>
